# crypto-converter

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: run.py
src/currency_conversion_api/: main.py  settings.py
src/currency_conversion_api/adapters/: http_client.py
src/currency_conversion_api/api/: endpoints.py
src/currency_conversion_api/domain/: __init__.py  exceptions.py  model.py  schemata.py
src/currency_conversion_api/views/: currency_pairs.py
src/quote_consumer/: __init__.py  main.py  settings.py
src/quote_consumer/adapters/: currency_pair_repository.py  http_client.py
src/quote_consumer/api/: endpoints.py
src/quote_consumer/domain/: exceptions.py  model.py  schemata.py
src/quote_consumer/services/: currency_pairs.py  dependencies.py
src/quote_consumer/views/: currency_pairs.py
tests/: conftest.py
tests/currency_conversion_api/: conftest.py  test_endpoints.py  test_fetch_currency_pairs_view.py  test_http_client.py  test_main.py  test_model.py  test_schemata.py  test_settings.py
tests/quote_consumer/: conftest.py  test_currency_pair_repository.py  test_currency_pairs_service.py  test_currency_pairs_view.py  test_endpoints.py  test_http_client.py  test_main.py  test_model.py  test_schemata.py  test_settings.py
